[package]
name = "pixel-says"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2021"
description = "A pixel image cowsay tool that converts images to terminal text with true color or monochrome support"
documentation = "https://docs.rs/pixel-says"
repository = "https://github.com/rust-lang/pixel-says"
readme = "README.md"
keywords = ["pixel", "cowsay", "image", "terminal", "truecolor"]
categories = [
  "text-processing",
  "visualization",
  "rendering",
  "command-line-utilities",
  "multimedia::images"
]
license = "MIT OR Apache-2.0"

[features]
clippy = []

[dependencies]
regex = "1.10.4"
smallvec = "1.11.2"
textwrap = "0.16.0"
unicode-width = "0.1.11"
image = "0.25.1"

[workspace]
members = ["fsays"]
