[package]
name = "psays"
version = "0.1.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2021"
description = "Command line tool for pixel-says library"
documentation = "https://docs.rs/pixel-says"
repository = "https://github.com/rust-lang/pixel-says"
keywords = ["pixel", "image", "cowsay", "terminal", "truecolor"]
categories = [
  "text-processing",
  "visualization",
  "rendering",
  "command-line-utilities",
  "multimedia::images"
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixel-says = { version = "0.1", path = ".." }
clap = { version = "4", features = ["cargo"] }
anyhow = "1.0"
